--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   camera: ^0.5.8+10
   path_provider: ^1.6.21
   flutter_tts:
+  cloud_firestore:
 
 
   # The following adds the Cupertino Icons font to your application.
