--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,7 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '14.0'
+#pod 'Firebase/MLVisionFaceModel'
+#pod 'GoogleMLKit/FaceDetection'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
