--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   http: ^0.12.2
   http_parser: ^3.1.4
   mime: ^0.9.7
+  overlay_support:
   #firebase_ml_vision: ^0.9.8
   video_player: ^0.11.1+2
   gallery_saver: ^2.0.1
