--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,10 @@ dependencies:
   http_parser: ^3.1.4
   mime: ^0.9.7
   overlay_support:
+  url_launcher: ^5.7.10
   #firebase_ml_vision: ^0.9.8
   video_player: ^0.11.1+2
-  gallery_saver: ^2.0.1
+  #gallery_saver: ^2.0.1
   #image: ^2.1.18
   #image_picker: ^0.6.7+12
   #tflite_flutter: ^0.5.0
