--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.8.1  
+
+flutter_icons:
+  ios: true
+  image_path: "assets/launch_icon.png"  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
