--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - images/header.jpg
+    - images/menu_header.PNG
  #   - assets/face_detection_front.tflite
 
   # An image asset can refer to one or more resolution-specific "variants", see
