--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.430504679399-bihqm76uitu73vgi8eujbvauius49iuo</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC2-gVdElDekh3OzRP9wVD6KR1JmMA1XO8</string>
+	<string>***********************</string>
 	<key>GCM_SENDER_ID</key>
 	<string>430504679399</string>
 	<key>PLIST_VERSION</key>
